tests/macros/confirm/mask.rs
fn main() {
    let q = inquisition::questions![confirm { mask: todo!() }];
}
